btn hoven on mobile devices bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,12 @@ a {
     border-radius: 5px;
 }
 
+@media only screen and (max-width: 750px){
+    .hover-btn:hover {
+        display: none;
+    }
+}
+
 p {
     line-height: 2rem;
 }
